# softver-za-prodavnice

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  cfg.txt  config.txt
data/: artikli_na_stanju.txt  config.txt  info.txt  korisnici.txt  prodani_artikli.txt
data/backup/15.01.2022/: korisnici.txt
include/: boss.hpp  item.hpp  user.hpp
include/softver-za-prodavnice/: boss.hpp  config.hpp  database.hpp  employee.hpp  files.hpp  item.hpp  report.hpp  store.hpp  tui.hpp  user.hpp  util.hpp
src/: boss.cpp  config.cpp  database.cpp  employee.cpp  files.cpp  item.cpp  main.cpp  report.cpp  tui.cpp  tui2.cpp  tui3.cpp  user.cpp  util.cpp
tests/: CMakeLists.txt  tests.cpp
